[package]
name = "wrt-logging"
version.workspace = true
edition.workspace = true
description = "Logging infrastructure for the WebAssembly Runtime (WRT)"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/wrt-logging"
keywords = ["wasm", "webassembly", "runtime", "logging", "component-model"]
categories = ["wasm", "no-std", "development-tools::debugging"]

[lints]
workspace = true

[dependencies]
wrt-error = { workspace = true, default-features = false }
wrt-host = { workspace = true, default-features = false }
wrt-foundation = { workspace = true, default-features = false }
# No-std support (removed invalid alloc dependency)

# Optional dependencies
log = { version = "0.4", optional = true }

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
std = ["wrt-host/std", "wrt-foundation/std", "log"]
# For compatibility with verification script
# This is a no-op since the crate is no_std by default
no_std = []

# Allocation support for no_std environments
alloc = ["wrt-foundation/alloc", "wrt-host/alloc"]
kani = ["wrt-host/kani"]

# Safety level presets using capability-based features
qm = ["wrt-foundation/dynamic-allocation"]
asil-a = ["wrt-foundation/bounded-collections"]
asil-b = ["wrt-foundation/bounded-collections"]
asil-c = ["wrt-foundation/static-memory-safety"]
asil-d = ["wrt-foundation/maximum-safety"]

# Legacy compatibility features
safe-memory = ["asil-b"]
safety-asil-b = ["asil-b"]
safety-asil-c = ["asil-c"]
safety-asil-d = ["asil-d"]

# Disable panic handler for library builds to avoid conflicts

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"] 