[package]
name = "wrt-math"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Mathematical operations for the WRT runtime, supporting WebAssembly standards."
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/wrt-math" # TODO: Update if incorrect
readme = "README.md"
keywords = ["webassembly", "wasm", "math", "no_std"]
categories = ["wasm", "no-std"]

[lints]
workspace = true

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
# Standard library support - enables use of std::f32/f64 math functions
std = ["wrt-platform/std"]
# Allocator support (implicitly enabled by std)
# This crate is no_std by default, this feature is a no-op for compatibility
no_std = []

# Allocation support for no_std environments
alloc = []
# Platform feature enables SIMD operations
platform = ["wrt-platform", "std"]

# Disable panic handler for library builds to avoid conflicts
safety-asil-b = []
safety-asil-c = ["safety-asil-b"]
safety-asil-d = ["safety-asil-c"]


[dependencies]
wrt-error = { workspace = true, default-features = false }
wrt-platform = { workspace = true, optional = true }

# Note: alloc support is provided through cfg(feature = "std") in source code

[dev-dependencies]
# Add development dependencies here 