[package]
name = "wrt-math"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Mathematical operations for the WRT runtime, supporting WebAssembly standards."
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/wrt-math" # TODO: Update if incorrect
readme = "README.md"
keywords = ["webassembly", "wasm", "math", "no_std"]
categories = ["wasm", "no-std"]

[lints]
workspace = true

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
# Standard library support - enables use of std::f32/f64 math functions
std = ["wrt-platform/std", "dynamic-allocation"]
# Allocator support (implicitly enabled by std)
# This crate is no_std by default, this feature is a no-op for compatibility
no_std = []

# Allocation support for no_std environments
alloc = []
# Platform feature enables SIMD operations
platform = ["wrt-platform", "std"]

# Core allocation strategies (aligned with wrt-foundation)
dynamic-allocation = []
static-allocation = []
verified-static-allocation = ["static-allocation"]

# Capability features
compile-time-capacity-limits = []
runtime-bounds-checking = []
formal-verification-required = []

# ASIL Safety Levels
qm = ["dynamic-allocation"]
asil-a = ["runtime-bounds-checking"]
asil-b = ["asil-a", "compile-time-capacity-limits"]
asil-c = ["asil-b", "static-allocation"]
asil-d = ["asil-c", "verified-static-allocation", "formal-verification-required"]

# Math-specific safety features
checked-arithmetic = []
saturating-arithmetic = []
overflow-detection = []
nan-propagation-checking = []

# Legacy compatibility
safety-asil-b = ["asil-b"]
safety-asil-c = ["asil-c"]
safety-asil-d = ["asil-d"]


[dependencies]
wrt-error = { workspace = true, default-features = false }
wrt-platform = { workspace = true, optional = true }
libm = { version = "0.2", default-features = false }

# Note: alloc support is provided through cfg(feature = "std") in source code

[dev-dependencies]
# Add development dependencies here 