[package]
name = "wrt-panic"
version.workspace = true
edition.workspace = true
description = "Panic handler for WRT - provides ASIL-B/D compliant panic handling"
license.workspace = true
repository.workspace = true
keywords = ["panic", "no_std", "embedded", "safety-asil-b", "asil"]
categories = ["no-std", "embedded"]

[dependencies]
# No dependencies to avoid circular dependency issues
# All required types are defined inline for maximum compatibility

# std support is controlled via features, not dependencies
# std is built into Rust and doesn't need to be listed as a dependency

[features]
# Default features - pure no_std by default following WRT pattern
default = []

# Binary choice: std OR no_std (standalone panic handler)
std = []
no_std = []

# Development profile panic handler (with enhanced debugging info)
dev = []

# Release profile panic handler (minimal, optimized for production) 
release = []

# ASIL-B compliance features (≥90% Single-Point Fault Metric)
asil-b = []

# ASIL-D compliance features (≥99% Single-Point Fault Metric)
asil-d = []

# Safety features for enhanced fault detection
safety-asil-b = []

# Optimization features for performance-critical paths
optimize = []

# Enable panic handler (for binary applications only)
default-panic-handler = []
safety-asil-c = ["safety-asil-b"]
safety-asil-d = ["safety-asil-c"]


[lib]
name = "wrt_panic"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]