[package]
name = "wrt-runtime"
version.workspace = true
edition.workspace = true
description = "WebAssembly Component Model Runtime for WRT"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/wrt-runtime"
readme = "README.md"
keywords = ["wasm", "webassembly", "runtime", "component-model"]
categories = ["wasm", "no-std"]

[lints]
workspace = true

[dependencies]
wrt-error = { workspace = true, default-features = false }
wrt-foundation = { workspace = true, default-features = false }
wrt-format = { workspace = true, default-features = false }
wrt-sync = { workspace = true, default-features = false }
wrt-decoder = { workspace = true, default-features = false }
wrt-instructions = { workspace = true, default-features = false }
wrt-host = { workspace = true, default-features = false, optional = true }
wrt-intercept = { workspace = true, default-features = false }
wrt-platform = { workspace = true, default-features = false, optional = true }
wrt-debug = { workspace = true, default-features = false, optional = true }

# No-std support (removed invalid alloc dependency)

# No additional dependencies for now

[features]
default = ["std"] # Enable std by default for platform compatibility
# Binary choice: std OR no_std (no alloc middle ground)
std = [
    "wrt-decoder/std",
    "wrt-format/std",
    "dep:wrt-host",
    "wrt-host?/std",
    "wrt-instructions/std",
    "wrt-intercept/std",
    "dep:wrt-platform",
    "wrt-sync/std",
    "wrt-foundation/std",
    "wrt-foundation/platform-memory"]

# Allocation support for no_std environments (DEPRECATED - use bounded-allocation instead)
alloc = [
    "wrt-foundation/bounded-allocation",
    "wrt-format/alloc",
    "wrt-host?/alloc",
    "wrt-instructions/alloc",
    "wrt-intercept/alloc"]
# Debug support features
debug = ["dep:wrt-debug", "wrt-debug/line-info"]
# For compatibility with verification script
# This is a no-op since the crate is no_std by default
no_std = []
optimize = [
    "wrt-foundation/optimize",
    # "wrt-decoder/optimize",
    "wrt-instructions/optimize",
    "wrt-host?/optimize",
    "wrt-intercept/optimize"]

# ============================================================================
# Four-Layer Safety Architecture Feature Propagation
# ============================================================================

# Layer 1: Memory Management Strategy (mutually exclusive)
static-allocation = ["wrt-foundation/static-allocation"]
bounded-allocation = ["wrt-foundation/bounded-allocation"]
managed-allocation = ["wrt-foundation/managed-allocation"]
std-allocation = ["wrt-foundation/std-allocation"]

# Layer 3: Safety Standards (mutually exclusive within project)
iso-26262 = ["wrt-foundation/iso-26262"]
do-178c = ["wrt-foundation/do-178c"]
iec-61508 = ["wrt-foundation/iec-61508"]
iec-62304 = ["wrt-foundation/iec-62304"]
en-50128 = ["wrt-foundation/en-50128"]
iso-25119 = ["wrt-foundation/iso-25119"]

# Layer 4: Safety Integrity Levels (dependent on standard)
# ISO 26262 - Automotive
qm = ["wrt-foundation/qm"]
asil-a = ["wrt-foundation/asil-a"]
asil-b = ["wrt-foundation/asil-b"]
asil-c = ["wrt-foundation/asil-c"]
asil-d = ["wrt-foundation/asil-d"]

# DO-178C - Aerospace
dal-e = ["wrt-foundation/dal-e"]
dal-d = ["wrt-foundation/dal-d"]
dal-c = ["wrt-foundation/dal-c"]
dal-b = ["wrt-foundation/dal-b"]
dal-a = ["wrt-foundation/dal-a"]

# IEC 61508 - Industrial
sil-1 = ["wrt-foundation/sil-1"]
sil-2 = ["wrt-foundation/sil-2"]
sil-3 = ["wrt-foundation/sil-3"]
sil-4 = ["wrt-foundation/sil-4"]

# IEC 62304 - Medical
class-a = ["wrt-foundation/class-a"]
class-b = ["wrt-foundation/class-b"]
class-c = ["wrt-foundation/class-c"]

# EN 50128 - Railway
railway-sil-0 = ["wrt-foundation/railway-sil-0"]
railway-sil-1 = ["wrt-foundation/railway-sil-1"]
railway-sil-2 = ["wrt-foundation/railway-sil-2"]
railway-sil-3 = ["wrt-foundation/railway-sil-3"]
railway-sil-4 = ["wrt-foundation/railway-sil-4"]

# ISO 25119 - Agricultural
agpl-a = ["wrt-foundation/agpl-a"]
agpl-b = ["wrt-foundation/agpl-b"]
agpl-c = ["wrt-foundation/agpl-c"]
agpl-d = ["wrt-foundation/agpl-d"]
agpl-e = ["wrt-foundation/agpl-e"]

# Legacy compatibility features (DEPRECATED - use four-layer architecture above)
safe-memory = ["iso-26262", "asil-b"]
safety-asil-b = ["iso-26262", "asil-b"]
safety-asil-c = ["iso-26262", "asil-c"]
safety-asil-d = ["iso-26262", "asil-d"]

# Platform features - properly abstracted for ASIL compliance
# Platform sync enables native platform synchronization primitives
platform-sync = ["dep:wrt-platform", "wrt-platform?/std"]
# Specific platform support (requires platform-sync)
platform-macos = ["platform-sync", "wrt-platform?/platform-macos"]
platform-linux = ["platform-sync", "wrt-platform?/platform-linux"]
platform-qnx = ["platform-sync", "wrt-platform?/platform-qnx"]
platform-embedded = ["dep:wrt-platform"] # Minimal platform support
helper-mode = ["dep:wrt-platform", "wrt-platform?/helper-mode"]

# Verification features
kani = []
kani-verifier = []


