[package]
name = "wrt-runtime"
version.workspace = true
edition.workspace = true
description = "WebAssembly Component Model Runtime for WRT"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/wrt-runtime"
readme = "README.md"
keywords = ["wasm", "webassembly", "runtime", "component-model"]
categories = ["wasm", "no-std"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(test)'] }
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_macros = "allow"
missing_docs = "allow"
dead_code = "allow"
unreachable_patterns = "allow"

[lints.clippy]
# Core allows from workspace
needless_continue = "allow"
if_not_else = "allow"
needless_pass_by_value = "allow"
manual_let_else = "allow"
elidable_lifetime_names = "allow"
unused_self = "allow"
ptr_as_ptr = "allow"
cast_possible_truncation = "allow"
too_many_lines = "allow"
similar_names = "allow"
module_name_repetitions = "allow"
inline_always = "allow"
multiple_crate_versions = "allow"
semicolon_if_nothing_returned = "allow"
comparison_chain = "allow"
ignored_unit_patterns = "allow"
single_match_else = "allow"
needless_range_loop = "allow"
explicit_iter_loop = "allow"
bool_to_int_with_if = "allow"
match_same_arms = "allow"
match_like_matches_macro = "allow"
result_unit_err = "allow"
uninlined_format_args = "allow"
large_enum_variant = "allow"
must_use_candidate = "allow"
new_without_default = "allow"
used_underscore_binding = "allow"
wildcard_in_or_patterns = "allow"
map_unwrap_or = "allow"
ref_option = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
type_complexity = "allow"
needless_borrow = "allow"
default_trait_access = "allow"
init_numbered_fields = "allow"
field_reassign_with_default = "allow"
op_ref = "allow"
should_implement_trait = "allow"
match_wildcard_for_single_variants = "allow"
reserve_after_initialization = "allow"
needless_late_init = "allow"
empty_line_after_doc_comments = "allow"
int_plus_one = "allow"
extra_unused_lifetimes = "allow"
unnecessary_cast = "allow"
manual_range_contains = "allow"
single_match = "allow"
question_mark = "allow"
collapsible_if = "allow"
redundant_closure = "allow"
iter_nth = "allow"
clone_on_copy = "allow"
map_identity = "allow"
range_plus_one = "allow"
arc_with_non_send_sync = "allow"
collapsible_match = "allow"
explicit_auto_deref = "allow"
useless_conversion = "allow"
or_fun_call = "allow"
option_map_or_err_ok = "allow"
map_or_err_ok = "allow"
explicit_counter_loop = "allow"
unwrap_or_default = "allow"
get_first = "allow"
range_minus_one = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
manual_range_patterns = "allow"
unnecessary_map_or = "allow"
manual_unwrap_or_default = "allow"

[dependencies]
wrt-error = { workspace = true, default-features = false }
wrt-foundation = { workspace = true, default-features = false }
wrt-format = { workspace = true, default-features = false }
wrt-sync = { workspace = true, default-features = false }
wrt-decoder = { workspace = true, default-features = false }
wrt-instructions = { workspace = true, default-features = false }
wrt-host = { workspace = true, default-features = false, optional = true }
wrt-intercept = { workspace = true, default-features = false }
wrt-platform = { workspace = true, default-features = false, optional = true }
wrt-debug = { workspace = true, default-features = false, optional = true }
wrt-wasi = { workspace = true, default-features = false, optional = true }

# No-std support (removed invalid alloc dependency)

[features]
default = ["std"] # Enable std by default for platform compatibility
# Binary choice: std OR no_std (no alloc middle ground)
std = [
    "wrt-decoder/std",
    "wrt-format/std",
    "dep:wrt-host",
    "wrt-host?/std",
    "wrt-instructions/std",
    "wrt-intercept/std",
    "dep:wrt-platform",
    "wrt-sync/std",
    "wrt-foundation/std",
    "wrt-foundation/platform-memory",
    "wrt-foundation/tracing"]

# Tracing support for debugging complex execution flows
tracing = ["wrt-foundation/tracing"]

# WASI support - uses wrt-wasi for WASI host function implementations
wasi = ["std", "dep:wrt-wasi", "wrt-wasi?/std", "wrt-wasi?/preview2", "wrt-wasi?/wasi-clocks", "wrt-wasi?/wasi-io", "wrt-wasi?/wasi-cli"]

# Allocation support for no_std environments (DEPRECATED - use bounded-allocation instead)
alloc = [
    "wrt-foundation/bounded-allocation",
    "wrt-format/alloc",
    "wrt-host?/alloc",
    "wrt-instructions/alloc",
    "wrt-intercept/alloc"]
# Debug support features
debug = ["dep:wrt-debug", "wrt-debug/line-info"]
# Debugger callback support - enables profiling and debugging via RuntimeDebugger trait
debugger = ["std", "dep:wrt-debug", "wrt-debug/runtime-traits"]
# For compatibility with verification script
# This is a no-op since the crate is no_std by default
no_std = []
optimize = [
    "wrt-foundation/optimize",
    # "wrt-decoder/optimize",
    "wrt-instructions/optimize",
    "wrt-host?/optimize",
    "wrt-intercept/optimize"]

# ============================================================================
# Four-Layer Safety Architecture Feature Propagation
# ============================================================================

# Layer 1: Memory Management Strategy (mutually exclusive)
static-allocation = ["wrt-foundation/static-allocation"]
bounded-allocation = ["wrt-foundation/bounded-allocation"]
managed-allocation = ["wrt-foundation/managed-allocation"]
std-allocation = ["wrt-foundation/std-allocation"]

# Layer 3: Safety Standards (mutually exclusive within project)
iso-26262 = ["wrt-foundation/iso-26262"]
do-178c = ["wrt-foundation/do-178c"]
iec-61508 = ["wrt-foundation/iec-61508"]
iec-62304 = ["wrt-foundation/iec-62304"]
en-50128 = ["wrt-foundation/en-50128"]
iso-25119 = ["wrt-foundation/iso-25119"]

# Layer 4: Safety Integrity Levels (dependent on standard)
# ISO 26262 - Automotive
qm = ["wrt-foundation/qm"]
asil-a = ["wrt-foundation/asil-a"]
asil-b = ["wrt-foundation/asil-b"]
asil-c = ["wrt-foundation/asil-c"]
asil-d = ["wrt-foundation/asil-d"]

# DO-178C - Aerospace
dal-e = ["wrt-foundation/dal-e"]
dal-d = ["wrt-foundation/dal-d"]
dal-c = ["wrt-foundation/dal-c"]
dal-b = ["wrt-foundation/dal-b"]
dal-a = ["wrt-foundation/dal-a"]

# IEC 61508 - Industrial
sil-1 = ["wrt-foundation/sil-1"]
sil-2 = ["wrt-foundation/sil-2"]
sil-3 = ["wrt-foundation/sil-3"]
sil-4 = ["wrt-foundation/sil-4"]

# IEC 62304 - Medical
class-a = ["wrt-foundation/class-a"]
class-b = ["wrt-foundation/class-b"]
class-c = ["wrt-foundation/class-c"]

# EN 50128 - Railway
railway-sil-0 = ["wrt-foundation/railway-sil-0"]
railway-sil-1 = ["wrt-foundation/railway-sil-1"]
railway-sil-2 = ["wrt-foundation/railway-sil-2"]
railway-sil-3 = ["wrt-foundation/railway-sil-3"]
railway-sil-4 = ["wrt-foundation/railway-sil-4"]

# ISO 25119 - Agricultural
agpl-a = ["wrt-foundation/agpl-a"]
agpl-b = ["wrt-foundation/agpl-b"]
agpl-c = ["wrt-foundation/agpl-c"]
agpl-d = ["wrt-foundation/agpl-d"]
agpl-e = ["wrt-foundation/agpl-e"]

# Legacy compatibility features (DEPRECATED - use four-layer architecture above)
safe-memory = ["iso-26262", "asil-b"]
safety-asil-b = ["iso-26262", "asil-b"]
safety-asil-c = ["iso-26262", "asil-c"]
safety-asil-d = ["iso-26262", "asil-d"]

# Platform features - properly abstracted for ASIL compliance
# Platform sync enables native platform synchronization primitives
platform-sync = ["dep:wrt-platform", "wrt-platform?/std"]
# Specific platform support (requires platform-sync)
platform-macos = ["platform-sync", "wrt-platform?/platform-macos"]
platform-linux = ["platform-sync", "wrt-platform?/platform-linux"]
platform-qnx = ["platform-sync", "wrt-platform?/platform-qnx"]
platform-embedded = ["dep:wrt-platform"] # Minimal platform support
helper-mode = ["dep:wrt-platform", "wrt-platform?/helper-mode"]

# Verification features
kani = []
kani-verifier = []

[dev-dependencies]
serial_test = "3.2"
